# Python_Developer_Test

./: LICENSE  README.md  Readme.md  console_app.py  fastapi_app.py  pyproject.toml
src/: alembic.ini  config.py  init_project.py  main.py  pyproject.toml  start_project.py
src/Commands/init_programm/: StartConsoleApp.py
src/alembic/: env.py
src/alembic/versions/: 2024_06_30_1118-efd8d839efaa_initial_migration.py  2024_07_24_1743-cc4713e81c65_database_creation.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  users.py
src/app/: console_app.py  fastapi_app.py
src/commands/: ICommand.py
src/commands/init_program/: StartConsoleApp.py
src/core/: config.py
src/core/exception/: __init__.py  exception_handlers.py  exceptions.py
src/core/models/: base.py  db_helper.py  user.py
src/core/repositories/: __init__.py  repository_factory.py  repository_interface.py
src/core/schemas/: __init__.py  user.py
src/core/services/: __init__.py  user_service.py
src/crud/: users_in_database.py  users_in_memory.py
src/exceptions/User/: UserNotFoundException.py  UserNotFoundExceptionHandler.py
src/factories/project_type_factory/: ConsoleAppFactory.py  FastapiAppFactory.py  IAppFactory.py  ProjectTypeFactory.py
src/factories/user_repository_factory/: IFactory.py  RepositoryFactory.py  (+2 more)
src/models/: BaseCustomModel.py  UserModel.py
src/repositories/: IRepository.py  InDatabaseUserRepository.py  InMemoryUserRepository.py
src/routing/: IRouter.py  UserCrudRouter.py
src/schemas/: User.py
src/services/: IService.py
src/utils/: DatabaseHelper.py  IoC.py
(+4 files in other folders)
